--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ img {
   background-color: #2196f3;
   cursor: pointer;
 }
+
 .first-button {
   display: block;
   margin: 0 auto;
@@ -119,6 +120,7 @@ img {
   letter-spacing: 0.02em;
   color: #212121;
   text-decoration: none;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-list-link:hover,
@@ -135,6 +137,7 @@ img {
   letter-spacing: 0.02em;
   color: #757575;
   text-decoration: none;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-mail-link:hover,
@@ -149,6 +152,11 @@ img {
 .address-mail-link:hover .envelope-icon,
 .address-mail-link:focus .envelope-icon {
   fill: #2196f3;
+}
+
+.tel-icon,
+.envelope-icon {
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-tel-link:hover .tel-icon,
@@ -264,6 +272,30 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
+.thumb {
+  position: relative;
+  overflow: hidden;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.label {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: 0;
+  padding: 27px 82px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background: rgba(47, 48, 58, 0.8);
+}
+
 .team {
   background-color: #f5f4fa;
 }
@@ -313,6 +345,7 @@ img {
   height: 44px;
   background-color: #ffffff;
   border-radius: 50%;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover,
@@ -332,6 +365,7 @@ img {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover .social-link-icon,
@@ -347,7 +381,9 @@ img {
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .clients-link:hover,
 .clients-link:focus {
   border-color: #2196f3;
@@ -361,6 +397,7 @@ img {
 
 .clients-link-icon {
   fill: #afb1b8;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover .clients-link-icon,
@@ -440,6 +477,7 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   margin-bottom: 100px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link-footer:hover,
@@ -460,6 +498,7 @@ img {
   width: 20px;
   height: 20px;
   fill: #ffffff;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link-footer:hover .social-link-icon-footer,
@@ -502,10 +541,11 @@ img {
   border: none;
   margin-bottom: 34px;
   margin-right: 8px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .all {
-  weight: 73px;
+  width: 73px;
   height: 38px;
   padding-right: 22px;
   padding-left: 22px;
@@ -514,15 +554,15 @@ img {
 }
 
 .web {
-  weight: 128px;
   height: 38px;
   padding-right: 22px;
   padding-left: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
 }
+
 .application {
-  weight: 145px;
+  width: 145px;
   height: 38px;
   padding-right: 22px;
   padding-left: 22px;
@@ -531,7 +571,7 @@ img {
 }
 
 .design {
-  weight: 103px;
+  width: 103px;
   height: 38px;
   padding-right: 22px;
   padding-left: 22px;
@@ -540,7 +580,7 @@ img {
 }
 
 .marketing {
-  weight: 130px;
+  width: 130px;
   height: 38px;
   padding-right: 22px;
   padding-left: 22px;
@@ -567,6 +607,7 @@ img {
 .gallery-list {
   display: inline;
   border: 1px solid #eeeeee;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-list:hover,
