--- a/css/styles.css
+++ b/css/styles.css
@@ -625,10 +625,44 @@ img {
 }
 
 .gallery-list {
+  position: relative;
   margin-top: 30px;
   margin-left: 30px;
   flex-basis: calc(100% / 3 - 30px);
   padding: 0;
+  overflow: hidden;
+}
+
+.gallery-list:hover .overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  left: 0px;
+  top: 0px;
+  background: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0.2, 1);
+  opacity: 0;
+}
+
+.overlay-text {
+  position: absolute;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  position: absolute;
+  width: 322px;
+  height: 168px;
+  padding: 63px 24px;
 }
 
 .gallery-list-wraper {
@@ -658,3 +692,63 @@ img {
 }
 
 /*portfolio end*/
+
+/*backdrop*/
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+
+  transition: all 250ms linear;
+}
+
+.backdrop .is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+  transition: trasform 250ms linear 0ms;
+}
+
+.backdrop.is-hidden {
+  transition: all 250ms linear;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  min-height: 581px;
+  background-color: #ffffff;
+  transition: transform 250ms linear 250ms;
+}
+
+.close-button {
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.button-close-icon {
+  width: 18px;
+  height: 18px;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+/*backdropend*/
