--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ img {
   margin: 0 auto;
 }
 .menu-list-link {
+  box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -174,6 +175,19 @@ img {
 .tel-icon {
   margin-right: 10px;
   fill: #757575;
+}
+
+.current:hover::after {
+  display: block;
+  content: "";
+  position: absolute;
+
+  top: 76px;
+  padding: 0;
+  width: 48px;
+  height: 4px;
+  border-radius: 2px;
+  background-color: rgba(33, 150, 243, 0.9);
 }
 
 /*header end*/
