--- a/css/styles.css
+++ b/css/styles.css
@@ -177,14 +177,23 @@ img {
   fill: #757575;
 }
 
-.current:hover::after {
+.current::after {
   display: block;
   content: "";
   position: absolute;
-
-  top: 76px;
-  padding: 0;
+  margin-top: 33px;
   width: 48px;
+  height: 4px;
+  border-radius: 2px;
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.current-portfolio::after {
+  display: block;
+  content: "";
+  position: absolute;
+  margin-top: 33px;
+  width: 78px;
   height: 4px;
   border-radius: 2px;
   background-color: rgba(33, 150, 243, 0.9);
@@ -661,7 +670,7 @@ img {
   background: rgba(33, 150, 243, 0.9);
 
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
 }
 
@@ -703,6 +712,11 @@ img {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+.image-container {
+  position: relative;
+  overflow: hidden;
 }
 
 /*portfolio end*/
