--- a/css/styles.css
+++ b/css/styles.css
@@ -627,16 +627,10 @@ img {
   display: flex;
 }
 
-.gallery-list {
-  display: inline;
+.gallery-link {
+  display: inline-block;
   border: 1px solid #eeeeee;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.gallery-list:hover,
-.gallery-list:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery {
@@ -656,8 +650,17 @@ img {
   overflow: hidden;
 }
 
-.gallery-list:hover .overlay,
-.gallery-list:focus .overlay {
+.gallery-link {
+  text-decoration: none;
+}
+
+.gallery-list:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.gallery-link:hover .overlay,
+.gallery-link:focus .overlay {
   transform: translateY(0);
   opacity: 1;
 }
