--- a/css/styles.css
+++ b/css/styles.css
@@ -647,7 +647,6 @@ img {
   margin-left: 30px;
   flex-basis: calc(100% / 3 - 30px);
   padding: 0;
-  overflow: hidden;
 }
 
 .gallery-link {
@@ -655,6 +654,12 @@ img {
 }
 
 .gallery-list:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.gallery-link:focus {
+  display: block;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
